# vraw

./: .gitignore  Cargo.toml  READMD.md  README.md  build.sh  grammar.md
crate/: Cargo.toml
crate/src/: error.rs  lib.rs  main.rs  utils.rs
crate/src/interpret/: error.rs  mod.rs  stdlib.rs
crate/src/interpret/snapshots/: tests__interpret::tests::eval_program_with_call.snap  tests__interpret::tests::eval_program_with_default_arg.snap  tests__interpret::tests::eval_simple_program.snap
crate/src/lexer/: error.rs  mod.rs
crate/src/lexer/snapshots/: tests__lexer::tests::lex_curlies.snap  tests__lexer::tests::lex_escaped_string.snap  tests__lexer::tests::lex_float.snap  tests__lexer::tests::lex_identifier.snap  tests__lexer::tests::lex_integer.snap  tests__lexer::tests::lex_multiline_string.snap  tests__lexer::tests::lex_operators.snap  tests__lexer::tests::lex_parens.snap  tests__lexer::tests::lex_special.snap  tests__lexer::tests::lex_string.snap
crate/src/parser/: ast.rs  mod.rs
crate/src/parser/snapshots/: tests__parser::tests::parse_number_literal.snap  tests__parser::tests::parse_shape_default_arg.snap  tests__parser::tests::parse_shape_multiple_statements.snap  tests__parser::tests::parse_simple_binary_expression.snap  tests__parser::tests::parse_simple_identifier.snap  tests__parser::tests::parse_simple_program.snap  tests__parser::tests::parse_simple_shape.snap
src/: error.rs  lexer.rs  main.rs  parser.rs  utils.rs
src/interpret/: error.rs  mod.rs
src/lexer/: mod.rs
www/: package.json  tsconfig.json  tslint.json  webpack.config.js
(+43 files in other folders)
