[package]
name = "vraw"
version = "0.1.0"
readme = "../README.md"
authors = [ "Jake Runzer <jakerunzer@gmail.com>" ]
repository = "https://github.com/coffee-cup/vraw"
edition = "2018"

[dev-dependencies]
insta = "0.8.1"

[lib]
crate-type = [ "cdylib" ]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = "0.2.29"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however. Also as of wee_alloc v0.4.2, does not yet work on stable
# (tested with rust v1.31.1).
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3.6"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
